- Remove custom stringutils and move to common-lang3\n- Update javadoc to allow mvn site to build again\n- Addressed a few bugs from FindBugs report (mostly performance related)
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk@1844827 13f79535-47bb-0310-9956-ffa450edef68